WEB: Add a fixed height to screenshot boxes
This fixes layout problems with pages where screenshot boxes have a
different height (due to shorter/longer captions)

--- a/css/screenshots.css
+++ b/css/screenshots.css
@@ -73,6 +73,7 @@ background: #ccc;
 	padding: 10px;
 	text-align: center;
 	width: 256px;
+	height: 238px;
 }
 
 .screenshot .caption {
